# x-msg-im-client-sdk

./: .gitmodules  README.md  build.sh  clean.sh  run-cpp-linux.sh  run-electron-linux.sh  run-java-linux.sh
libx-msg-im-client-core/: CMakeLists.txt  ChannelGlobalTitle.cpp  ChannelGlobalTitle.h  XmsgImClientCore.cpp  XmsgImClientCore.h  XmsgImClientEvent.cpp  XmsgImClientEvent.h  XmsgImClientTimer.cpp  XmsgImClientTimer.h  XmsgImClientTimerMgr.cpp  XmsgImClientTimerMgr.h  libx-msg-im-client-core.h
libx-msg-im-client-db/: CMakeLists.txt  XmsgImClientDb.cpp  XmsgImClientDb.h  XmsgImClientDbApi.cpp  XmsgImClientDbApi.h  libx-msg-im-client-db.h
libx-msg-im-client-db/global/: XmsgImClientDbGlobal.cpp  XmsgImClientDbGlobal.h
libx-msg-im-client-db/org/: XmsgImClientDbUsrOrg.cpp  XmsgImClientDbUsrOrg.h
libx-msg-im-client-db/sqlite/: SqliteMisc.cpp  SqliteMisc.h  SqliteResultSet.cpp  SqliteResultSet.h
libx-msg-im-client-db/usr/: XmsgImClientDbUsrDat.cpp  XmsgImClientDbUsrDat.h
libx-msg-im-client-ffi/: CMakeLists.txt  libx-msg-im-client-ffi.h  x-msg-im-client-ffi.cpp
libx-msg-im-client-java/: pom.xml
libx-msg-im-client-java/pb/: all-in-one.proto  auto-gen.sh
libx-msg-im-client-java/src/x/msg/im/client/: XmsgErrCode.java  XmsgImClientDbApi.java  XmsgImClientNetApi.java  XmsgImClientSdk.java
libx-msg-im-client-java/src/x/msg/im/jni/: XmsgImClientJni.java
libx-msg-im-client-java/src/x/msg/pb/: PbXmsg.java
libx-msg-im-client-jni/: CMakeLists.txt  build.sh  clean.sh  x_msg_im_jni_XmsgImClientJni.cpp  x_msg_im_jni_XmsgImClientJni.h
libx-msg-im-client-net/: CMakeLists.txt  XmsgApNe.cpp  XmsgApNe.h  XmsgImAuthNe.cpp  XmsgImAuthNe.h  XmsgImClientNetApi.cpp  XmsgImClientNetApi.h  libx-msg-im-client-net.h
libx-msg-im-client-net/trans/: XmsgImTrans.cpp  XmsgImTrans.h  XmsgImTransInitiative.cpp  XmsgImTransInitiative.h  XmsgImTransPassive.cpp  XmsgImTransPassive.h
libx-msg-im-client-pb/: CMakeLists.txt  libx-msg-im-client-pb.h
libx-msg-im-client-pb-lite/: CMakeLists.txt  libx-msg-im-client-pb.h
libx-msg-im-client-pb-lite/cpp/: db-x-msg-im-client-common.pb.cc  db-x-msg-im-client-common.pb.h  net-x-msg-im-auth.pb.cc  net-x-msg-im-auth.pb.h  net-x-msg-im-hlr-auth.pb.cc  net-x-msg-im-hlr-auth.pb.h  sdk-x-msg-im-client-event.pb.cc
libx-msg-im-client-pb-lite/pb/: db-x-msg-im-client-common.proto  net-x-msg-im-auth.proto  net-x-msg-im-hlr-auth.proto  sdk-x-msg-im-client-event.proto
libx-msg-im-client-pb/cpp/: net-x-msg-channel-status.pb.cc  net-x-msg-channel-status.pb.h  net-x-msg-file.pb.cc  net-x-msg-file.pb.h  net-x-msg-im-auth.pb.cc  net-x-msg-im-auth.pb.h  net-x-msg-im-group-member.pb.cc  net-x-msg-im-group-member.pb.h  net-x-msg-im-group-msg.pb.cc  net-x-msg-im-group-msg.pb.h  net-x-msg-im-group-usr.pb.cc  net-x-msg-im-group-usr.pb.h  net-x-msg-im-hlr-auth.pb.cc  net-x-msg-im-hlr-contacts.pb.cc  net-x-msg-im-hlr-contacts.pb.h  net-x-msg-im-hlr-group.pb.cc  net-x-msg-im-hlr-group.pb.h  net-x-msg-im-hlr-other-usr.pb.cc  net-x-msg-im-hlr-other-usr.pb.h  net-x-msg-im-hlr-usr-dat.pb.cc  net-x-msg-im-hlr-usr-dat.pb.h  net-x-msg-im-hlr-usr-event.pb.cc  net-x-msg-im-hlr-usr-event.pb.h  net-x-msg-im-org.pb.cc  net-x-msg-im-org.pb.h  net-x-msg-oss.pb.cc  net-x-msg-oss.pb.h  net-x-msg-token-info.pb.cc  net-x-msg-token-info.pb.h  sdk-x-msg-im-client-event.pb.h
libx-msg-im-client-pb/pb/: auto-gen.sh  net-x-msg-channel-status.proto  net-x-msg-file.proto  net-x-msg-im-auth.proto  net-x-msg-im-group-member.proto  net-x-msg-im-group-msg.proto  net-x-msg-im-group-usr.proto  net-x-msg-im-hlr-auth.proto  net-x-msg-im-hlr-contacts.proto  net-x-msg-im-hlr-group.proto  net-x-msg-im-hlr-other-usr.proto  net-x-msg-im-hlr-usr-dat.proto  net-x-msg-im-hlr-usr-event.proto  net-x-msg-im-org.proto  net-x-msg-oss.proto  net-x-msg-token-info.proto
libx-msg-im-client-sdk/: CMakeLists.txt  XmsgImClientSdk.cpp  XmsgImClientSdk.h  libx-msg-im-client-sdk.h
libx-msg-im-client-xsc/: CMakeLists.txt  XscChannel.cpp  XscChannel.h  XscChannelTrans.cpp  XscChannelTrans.h  libx-msg-im-client-xsc.h
libx-msg-im-client-xsc/rudp/: XscRudpChannel.cpp  XscRudpChannel.h  ikcp.h
libx-msg-im-client-xsc/tcp/: XscTcpChannel.cpp  XscTcpChannel.h
libxsc-proto-client-cpp/: CMakeLists.txt  XscProto.cpp  XscProto.h  XscProtoDec.cpp  XscProtoDec.h  XscProtoEnc.cpp  XscProtoEnc.h  XscProtoPdu.cpp  XscProtoPdu.h  XscProtoTransaction.cpp  XscProtoTransaction.h  XscProtoTransmission.cpp  XscProtoTransmission.h  libxsc-proto.h
x-msg-im-client-test-cpp/: CMakeLists.txt  clean.sh  main.cpp
x-msg-im-client-test-cpp/test/: TestAuthAndAttach.cpp  TestAuthAndAttach.h
x-msg-im-client-test-electron/: .gitignore  clean.sh  index.html  libx-msg-im-client-sdk.js  main.js  package-lock.json  package.json  startup.sh
x-msg-im-client-test-electron/pb/: x-msg-im-client.d.ts  x-msg-im-client.js
x-msg-im-client-test-java/: pom.xml
x-msg-im-client-test-java/src/x/msg/ap/: TestXmsgAp.java  TestXmsgImSdkEventXmsgAp.java
x-msg-im-client-test-java/src/x/msg/channel/status/: TestXmsgChannelStatus.java  TestXmsgChannelStatusPubGroupStatusNotice.java  TestXmsgChannelStatusPubUsrStatusNotice.java  TestXmsgChannelStatusQueryReq.java  TestXmsgChannelStatusSubReq.java  TestXmsgChannelStatusUnSubReq.java
x-msg-im-client-test-java/src/x/msg/file/: TestXmsgFile.java  TestXmsgFileDownloadSimpleReq.java  TestXmsgFileUploadSimpleReq.java  TestXmsgFileUsrFileInfoQueryReq.java
x-msg-im-client-test-java/src/x/msg/im/auth/: TestXmsgImAuth.java  TestXmsgImAuthSimpleReq.java  TestXmsgImSdkEventXmsgImAuth.java
x-msg-im-client-test-java/src/x/msg/im/group/: TestXmsgImGroup.java  TestXmsgImGroupCreateReq.java  TestXmsgImGroupInfoQueryReq.java  TestXmsgImGroupInfoUpdateReq.java  TestXmsgImGroupMsgNotice.java  TestXmsgImGroupMsgQueryReq.java  TestXmsgImGroupMsgReadReq.java  TestXmsgImGroupMsgSyncReq.java  TestXmsgImGroupSendMsgReq.java  TestXmsgImGroupSyncGroupReq.java  (+1 more)
x-msg-im-client-test-java/src/x/msg/oss/: TestXmsgFile.java  TestXmsgFileDownloadSimpleReq.java  TestXmsgFileUploadSimpleReq.java  TestXmsgFileUsrFileInfoQueryReq.java
(+11 files in other folders)
