cmake_minimum_required(VERSION 2.8.12.2)
#
LINK_LIBRARIES(x-msg-im-client-sdk)
LINK_LIBRARIES(x-msg-im-client-net)
LINK_LIBRARIES(x-msg-im-client-db)
LINK_LIBRARIES(x-msg-im-client-core)
LINK_LIBRARIES(x-msg-im-client-pb-lite)
LINK_LIBRARIES(x-msg-im-client-xsc)
LINK_LIBRARIES(xsc-proto-client-cpp)
LINK_LIBRARIES(misc-cpp)
LINK_LIBRARIES(libprotobuf.a)
#
IF($ENV{PLAT} MATCHES "ANDROID")
		 ADD_DEFINITIONS(-DANDROID -DLINUX)
		 set(CMAKE_SYSTEM_NAME Android)
        set(CMAKE_ANDROID_NDK $ENV{CMAKE_ANDROID_NDK})
        set(CMAKE_SYSTEM_VERSION $ENV{CMAKE_SYSTEM_VERSION})
        set(CMAKE_ANDROID_ARCH_ABI $ENV{CMAKE_ANDROID_ARCH_ABI})
        set(CMAKE_ANDROID_STL_TYPE $ENV{CMAKE_ANDROID_STL_TYPE})
ELSE ()
	ADD_DEFINITIONS(-D$ENV{PLAT})
	IF (UNIX)
	        LINK_LIBRARIES(pthread dl)
    ELSE ()
            LINK_LIBRARIES(ws2_32)
    ENDIF()
ENDIF()
#
INCLUDE_DIRECTORIES(../libmisc-cpp)
INCLUDE_DIRECTORIES(../libxsc-proto-client-cpp)
INCLUDE_DIRECTORIES(../libx-msg-im-client-xsc)
INCLUDE_DIRECTORIES(../libx-msg-im-client-pb-lite)
INCLUDE_DIRECTORIES(../libx-msg-im-client-core)
INCLUDE_DIRECTORIES(../libx-msg-im-client-net)
INCLUDE_DIRECTORIES(../libx-msg-im-client-db)
INCLUDE_DIRECTORIES(../libx-msg-im-client-sdk)
INCLUDE_DIRECTORIES($ENV{PROTOBUF}/include)
#
ADD_COMPILE_OPTIONS(-std=c++11 -fPIC -g3 -O3 -Wall)
ADD_DEFINITIONS(-Wno-builtin-macro-redefined)
#
LINK_DIRECTORIES(../libmisc-cpp)
LINK_DIRECTORIES(../libxsc-proto-client-cpp)
LINK_DIRECTORIES(../libx-msg-im-client-xsc)
LINK_DIRECTORIES(../libx-msg-im-client-pb-lite)
LINK_DIRECTORIES(../libx-msg-im-client-core)
LINK_DIRECTORIES(../libx-msg-im-client-net)
LINK_DIRECTORIES(../libx-msg-im-client-db)
LINK_DIRECTORIES(../libx-msg-im-client-sdk)
LINK_DIRECTORIES($ENV{PROTOBUF}/lib)
#
FILE(GLOB SRC "./*.cpp")
#
PROJECT(x-msg-im-client-ffi)
#
ADD_LIBRARY(x-msg-im-client-ffi SHARED ${SRC})
INCLUDE(../__file__.cmake)
REDEFINE_FILE_MACRO(x-msg-im-client-ffi)
